<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <com.android.baselib.view.UNavigationBar
        android:id="@+id/navigationBars"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_75"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            >
            <LinearLayout
               style="@style/default_ll_horizon"
                >
                <TextView
                    style="@style/default_lable_title"
                    android:text="@string/phone_number"
                    />

                <EditText
                    android:id="@+id/et_phone_number"
                    style="@style/default_edit_content"
                    android:paddingLeft="@dimen/dp_20"
                    android:inputType="phone"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_pot5"
                android:background="@color/divider_color"/>
            <LinearLayout
                style="@style/default_ll_horizon"
                android:layout_marginTop="@dimen/dp_15"
                >
                <EditText
                    android:id="@+id/et_yzm_code"
                    style="@style/default_edit_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/yzm_code_tips"
                    android:inputType="number"
                    />
                <TextView
                    android:id="@+id/btn_yzm"
                    style="@style/default_button_style"
                    android:text="@string/get_yzm"
                    android:background="@drawable/rect_radio_gray_5"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_pot5"
                android:background="@color/divider_color"/>

            <Button
                android:id="@+id/btn_register"
                style="@style/default_button_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_80"
                android:background="@drawable/radio_button_bg_selector"
                android:gravity="center"
                android:text="@string/regist"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:id="@+id/login"
                style="@style/default_ll_horizon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                >
                <TextView
                    style="@style/default_lable_title"
                    android:text="@string/account_tips"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_12"
                    />

                <TextView
                    style="@style/default_lable_title"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_12"
                    />
            </LinearLayout>
        </LinearLayout>






    </LinearLayout>



</RelativeLayout>
