<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.android.baselib.view.UNavigationBar
        android:id="@+id/uNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/uNavigationBar"
        android:layout_marginTop="80dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            >
            <LinearLayout
               style="@style/default_ll_horizon"
                android:layout_marginBottom="@dimen/dp_5"
                >

                <EditText
                    android:id="@+id/et_phone_number"
                    style="@style/default_edit_content"
                    android:paddingLeft="@dimen/dp_5"
                    android:hint="@string/input_phone_number_tips"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColorHint="@color/gray_d7"

                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_pot5"
                android:background="@color/divider_color"/>
            <LinearLayout
                style="@style/default_ll_horizon"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                >
                <EditText
                    android:id="@+id/et_yzm_code"
                    style="@style/default_edit_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:textColorHint="@color/gray_d7"
                    android:hint="@string/intput_yzm_code_tips"
                    />
                <TextView
                    android:id="@+id/btn_yzm"
                    style="@style/default_button_style"
                    android:text="@string/get_dxyzm"
                    android:textColor="@color/black_1b"
                    android:textSize="@dimen/sp_14"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_pot5"
                android:background="@color/divider_color"/>
            <LinearLayout
                style="@style/default_ll_horizon"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                >
                <EditText
                    android:id="@+id/et_pwd"
                    style="@style/default_edit_content"
                    android:paddingLeft="@dimen/dp_5"
                    android:hint="@string/intput_pwd_tips"
                    android:inputType="text"
                    android:maxLength="21"
                    android:textColorHint="@color/gray_d7"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_pot5"

                android:background="@color/divider_color"/>
            <LinearLayout
                style="@style/default_ll_horizon"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                >
                <EditText
                    android:id="@+id/et_again_pwd"
                    style="@style/default_edit_content"
                    android:paddingLeft="@dimen/dp_5"
                    android:inputType="text"
                    android:maxLength="21"
                    android:hint="@string/intput_pwd_again_tips"
                    android:textColorHint="@color/gray_d7"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_pot5"

                android:background="@color/divider_color"/>



        </LinearLayout>
        <Button
            android:id="@+id/btn_complete"
            style="@style/default_button_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/rect_radio_red_5"
            android:text="@string/complete"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:textColor="@color/white"
            />
    </LinearLayout>



</RelativeLayout>
